# agent-ops-community

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agentops/harness/: BOOTSTRAP.md  DECISIONS.md  PROGRESS.md  TASKS.md  VERIFY.md
.github/: review-gate-prompt.md
.github/scripts/: review_gate.py
.github/workflows/: ai-review-autolabel.yml  ci.yml  review-gate-reusable.yml  review-gate.yml
data/: capabilities.yaml  skill_dependencies.yaml  skills.yaml  tools.yaml
docs/: architecture.md  plugin-authoring.md  roadmap.md
docs/architecture/adr/: 0001-public-private-plugin-boundary.md  README.md
examples/: local-smoke.yaml
src/agent_ops/: __init__.py  bootstrap.py  cli.py  harness.py  paths.py  plugins.py  process.py  skill_installer.py  verify.py
src/agent_ops/context/: __init__.py  builder.py  models.py
src/agent_ops/contracts/: __init__.py  job.py  result.py
src/agent_ops/data/: skill_dependencies.yaml  skills.yaml  tools.yaml
src/agent_ops/frameworks/: __init__.py  adapters.py  base.py
src/agent_ops/registries/: __init__.py  loader.py  models.py
tests/: test_cli.py  test_contracts.py  test_frameworks.py  test_harness.py  test_plugins.py  test_public_safety.py  test_readme_smoke.py  test_review_gate.py  test_skill_installer.py
